--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Youssef Portfolio</title>
-  <link rel="stylesheet" href="Portfolio.css">
+  <link rel="stylesheet" href="style.css">
 
 
 </head>
